Co-authored-by: hdsmathew <hdsmathew@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>About Us</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/nav.css">
     <link rel = "stylesheet" href="css/contact.css">
     <link rel = "stylesheet" href="css/footer.css">
 
@@ -15,31 +18,47 @@
  </style>
  </head>
  <body>
-   
-  <div style="margin: left 20% 20px;;padding:1px 16px;height: 1000px;" class="contact_us">
-  <h1 >contact us</h1>
-  <p class="wlc_message">we're here to help and answer any question you might have.</p>
-  <p class="wlc_message"> We look forward to hearing from you.</p>
-  <p>
-   
-     <fieldset>
-      <legend>Personal Information</legend>
-      <label>First Name<span>*</span></label>
-      <input type ="text" value="" name= "Fname" title="First name should start with an uppercase letter" required  style="margin-top:5px" />
-      <br><br>
-      <label>Last Name<span>*</span></label> 
-      <input type ="text" value="" name= "Lname" title="Last name should start with an uppercase letter" required  />
-      <br/><br/><br/>
-      <label>Email<span>*</span></label> 
-      <input type ="text" value="" name= "email" title="email should contains the @ sign" required />
-      <br/><br/><br/>
-      <label>Message<span>*</span></label><br/>
-      <textarea  rows="10" cols="60" name="comment" title="should leave a comment" required></textarea><br/><br/>
-      <br/>	
-      <input type ="submit" style="color:white; background-color:#00ACEE" value=" Submit Message" >
-   </form>
-  </p>
+
+  <nav class="navbar"></nav>
+
+  <div class="main-content">
+    <div class="about-us">
+    </div>
+
   </div>
+
+  <div class="about-us-desc">
+    <h2>About STYLISHWEAR</h2>
+    <p></p>
+  </div>
+   
+
+  <div class="contact-us">
+    <h1 >contact us</h1>
+    <p class="wlc_message">We are here to help and answer any query you might have.</p>
+    <p class="wlc_message"> We look forward to hearing from you.</p>
+   
+    <p>
+    
+      <fieldset>
+        <legend>Personal Information</legend>
+        <label>First Name<span> * </span></label>
+        <input type ="text" value="" name= "fname" title="First name should start with an uppercase letter" required  style="margin-top:5px" />
+        <br><br>
+        <label>Last Name<span> * </span></label> 
+        <input type ="text" value="" name= "lname" title="Last name should start with an uppercase letter" required  />
+        <br/><br/><br/>
+        <label>Email<span> * </span></label> 
+        <input type ="text" value="" name= "email" title="email should contains the @ sign" required />
+        <br/><br/><br/>
+        <label>Message<span> * </span></label><br/>
+        <textarea  rows="10" cols="60" name="comment" title="should leave a comment" required></textarea><br/><br/>
+        <br/>	
+        <input type ="submit" style="color:white; background: #00ACEE;  width: 20%; height:40px; text-align: center; " value="  Submit Message" >
+      </fieldset>
+    </p>
+  </div>
+  
 
   <footer></footer>
 
