--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
            <div class = "product-card">
                <div class = "product-image">
                    <span class = "discount-tag">50% off</span>
-                   <img src ="img/card1.png" class="product-thumb" alt="">;
+                   <img src ="img/Women/Hoodies_SweatShirts/10.png"  class="product-thumb" alt="">;
                    <button class="card-btn">Add To Cart</button>
                </div>
                <div class = "product-info">
@@ -43,7 +43,7 @@
            <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card2.png" class="product-thumb" alt="">;
+                <img src ="img/Women/Joggers/33.png"product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -55,7 +55,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card3.png" class="product-thumb" alt="">;
+                <img src ="img/Men/Sportswear/68.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -67,7 +67,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card4.png" class="product-thumb" alt="">;
+                <img src ="img/Men/Trousers/58.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -79,7 +79,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card5.png" class="product-thumb" alt="">;
+                <img src ="img/Men/Shoes/63.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -91,7 +91,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card6.png" class="product-thumb" alt="">;
+                <img src ="img/Women/Hoodies_SweatShirts/8.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -103,7 +103,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card7.png" class="product-thumb" alt="">;
+                <img src ="img/Men/Sportswear/70.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -115,7 +115,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card8.png" class="product-thumb" alt="">;
+                <img src ="img/Women/Shoes/23.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -162,7 +162,7 @@
         <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card2.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/47.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -174,7 +174,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card3.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/48.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -186,7 +186,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card4.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/49.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -198,7 +198,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card5.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/50.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -210,7 +210,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card6.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shirts_Blouse/3.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -222,7 +222,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card7.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shirts_Blouse/2.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -234,7 +234,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card8.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shirts_Blouse/4.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -256,7 +256,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card1.png" class="product-thumb" alt="">;
+                <img src ="img/Women/Jeans/11.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -268,7 +268,7 @@
         <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card2.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Jeans/12.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -280,7 +280,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card3.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Jeans/13.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -292,7 +292,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card4.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Jeans/14.png"class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -304,7 +304,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card5.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Jeans/51.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -316,7 +316,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card6.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Jeans/52.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -328,7 +328,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card7.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Jeans/53.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -340,7 +340,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card8.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Jeans/54.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -362,7 +362,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card1.png" class="product-thumb" alt="">;
+                <img src ="img/Women/Dress/76.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -374,7 +374,7 @@
         <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card2.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/77.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -386,7 +386,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card3.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/78.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -398,7 +398,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card4.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/79.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -410,7 +410,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card5.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/80.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -422,7 +422,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card6.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/81.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -434,7 +434,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card7.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/82.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -446,7 +446,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card8.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Dress/83.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
