--- a/viewproduct.html
+++ b/viewproduct.html
@@ -56,7 +56,7 @@
 
    <!-- cards-container-->
    <section class="product">
-    <h2 class="product-category">Shirts</h2>
+    <h2 class="product-category">Shirts|Blouses</h2>
     <button class = "pre-btn"><img src = "img/arrow.png" alt=""></button>
     <button class = "nxt-btn"><img src = "img/arrow.png" alt=""></button>
 
@@ -64,7 +64,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card1.png" class="product-thumb" alt="">;
+                <img src ="img/Men/Shirts/50.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -76,7 +76,7 @@
         <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card2.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/48.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -88,7 +88,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card3.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/49.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -100,7 +100,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card4.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/46.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -112,7 +112,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card5.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shirts/47.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -124,7 +124,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card6.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shirts_Blouse/2.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -136,7 +136,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card7.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shirts_Blouse/3.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -148,7 +148,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card8.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shirts_Blouse/4.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -170,7 +170,7 @@
         <div class = "product-card">
             <div class = "product-image">
                 <span class = "discount-tag">50% off</span>
-                <img src ="img/card1.png" class="product-thumb" alt="">;
+                <img src ="img/Men/Shoes/62.png" class="product-thumb" alt="">;
                 <button class="card-btn">Add To Cart</button>
             </div>
             <div class = "product-info">
@@ -182,7 +182,7 @@
         <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card2.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shoes/63.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -194,7 +194,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card3.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shoes/64.png"class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -206,7 +206,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card4.png" class="product-thumb" alt="">;
+             <img src ="img/Men/Shoes/65.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -218,7 +218,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card5.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shoes/21.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -230,7 +230,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card6.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shoes/22.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -242,7 +242,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card7.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shoes/23.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
@@ -254,7 +254,7 @@
      <div class = "product-card">
          <div class = "product-image">
              <span class = "discount-tag">50% off</span>
-             <img src ="img/card8.png" class="product-thumb" alt="">;
+             <img src ="img/Women/Shoes/24.png" class="product-thumb" alt="">;
              <button class="card-btn">Add To Cart</button>
          </div>
          <div class = "product-info">
