Co-authored-by: hdsmathew <hdsmathew@users.noreply.github.com>

--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,28 @@
   <nav class="navbar"></nav>
 
   <div class="main-content">
-    <img src="img/aboutus.png" alt="">
+    <div class="about-us">
+      <img src="img/aboutus.png" alt="about us">
+
+      <div class="about-us-desc">
+        <h2>About STYLISHWEAR</h2>
+        <br>
+        <p>Based In | Port Louis, Mauritius</p>
+        <br>
+        <p> Sustainable Practices | Sustainable & organic materials, eco-friendly & ethical production, plastic-free & 
+          recyclable packaging, recycling & donation campaign program</p>
+        <br>
+        <p>Product Range | Adult apparel, Shoes, Shirts, Tees, Trousers, Sportswear, Jeans, Sweatshirts/Hoodies, Joggers
+           and Dresses & Skirts</p>
+        <br>
+        <p>STYLISHWEAR, a newly launched online clothing website, knows the fashion industry can be a dirty place, 
+        thereby supporting eco-friendly standards. The brand wants the customers to look and feel as clean as 
+        possible with its high-quality apparel for both men and women including hoodies & sweatshirts, dresses, 
+        trousers and the comfiest tees among others. The clothes are made from organic and sustainably grown cotton, 
+        biodegradable modal and alpaca fibre and they are all crafted from non-toxic dyes. So, the categories of 
+        clothes are A+ quality, hence, our customers may not necessarily wash their clothes after one wear.</p>
+      </div>
+    </div>
   </div>
 
   <footer></footer>
