--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/aboutus.css">
 </head>
@@ -34,6 +37,29 @@
         trousers and the comfiest tees among others. The clothes are made from organic and sustainably grown cotton, 
         biodegradable modal and alpaca fibre and they are all crafted from non-toxic dyes. So, the categories of 
         clothes are A+ quality, hence, our customers may not necessarily wash their clothes after one wear.</p>
+      </div>
+    </div>
+
+    <div class="contact-us">
+      <h1 >Get in touch</h1>
+      <p class="wlc-message">We are here to help and answer any query you might have.</p>
+      <p class="wlc-message"> We look forward to hearing from you.</p>
+    
+      <div class="contact-us-form">
+          <legend>Personal Information</legend>
+          <label>First Name<span> * </span></label>
+          <input type ="text" value="" name= "fname" title="First name should start with an uppercase letter" required  style="margin-top:5px" />
+          <br><br>
+          <label>Last Name<span> * </span></label> 
+          <input type ="text" value="" name= "lname" title="Last name should start with an uppercase letter" required  />
+          <br/><br/><br/>
+          <label>Email<span> * </span></label> 
+          <input type ="text" value="" name= "email" title="email should contains the @ sign" required />
+          <br/><br/><br/>
+          <label>Message<span> * </span></label><br/>
+          <textarea  rows="10" cols="60" name="comment" title="should leave a comment" required></textarea><br/><br/>
+          <br/>	
+          <input type ="submit" value="Send Message" >
       </div>
     </div>
   </div>
