--- a/review.html
+++ b/review.html
@@ -15,7 +15,7 @@
 
 
     <div class="review-form">
-        <h3 style = "color:white">Please review your product</h3>
+        <h3 style = "color: black; background-color: beige;">Please review your product</h3>
 
         <fieldset class="personal-details">
           <legend>Personal Details:</legend>
@@ -29,7 +29,7 @@
         <fieldset class="product-details">
           <legend>Product Details:</legend>
           <h5>Please give us feedback on your appreciation of the product<h5>
-          <div class="rate">
+          <div class="star-rating">
             <input type="radio" id="star5" name="rate" value="5" />
             <label for="star5" title="text"></label>
             <input type="radio" id="star4" name="rate" value="4" />
