--- a/signup.html
+++ b/signup.html
@@ -21,6 +21,7 @@
     <div class="container">
         <img src = "img/logo.jpeg" class="logo" alt="">
         <div>
+            <input type ="text" autocomplete ="off" id ="full name" placeholder ="full name">
             <input type ="text" autocomplete ="off" id ="username" placeholder ="username">
             <input type ="email" autocomplete ="off" id ="email" placeholder ="email">
             <input type ="password" autocomplete ="off" id ="password" placeholder ="password">
