--- a/viewproduct.html
+++ b/viewproduct.html
@@ -30,7 +30,8 @@
         <div class="details">
             <h2 class="product-brand">Calvin Klein</h2>
             <p class="product-short-des">Dark Green Colour</p>
-            <span class="product-rating">Rating: 4.7/5</span> <br/><br/>
+            <p class="divider"></p>
+            <span class="product-rating">Rating: 4.7/5 (7 reviews)</span> <br/><br/>
             <span class="product-price">Rs 175</span>
             <span class="product-actual-price">Rs 350</span>
             <span class="product-discount">(50% off)</span>
