--- a/searchproduct.html
+++ b/searchproduct.html
@@ -7,7 +7,7 @@
     <title>Search Results for</title>
 
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/search.css">
+    <link rel="stylesheet" href="css/searchproduct.css">
 </head>
 <body>
 
