Co-authored-by: hdsmathew <hdsmathew@users.noreply.github.com>

--- a/searchproduct.html
+++ b/searchproduct.html
@@ -19,7 +19,7 @@
             <div class = "product-card">
                 <div class = "product-image">
                     <span class = "discount-tag">50% off</span>
-                    <img src ="img/card1.png" class="product-thumb" alt="">;
+                    <img src ="img/Women/Dress/81.png" class="product-thumb" alt="">;
                     <button class="card-btn">Add To Cart</button>
                 </div>
                 <div class = "product-info">
@@ -31,7 +31,7 @@
             <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card2.png" class="product-thumb" alt="">;
+                 <img src ="img/Men/Trousers/58.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
@@ -43,7 +43,7 @@
          <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card3.png" class="product-thumb" alt="">;
+                 <img src ="img/Women/Joggers/35.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
@@ -55,7 +55,7 @@
          <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card4.png" class="product-thumb" alt="">;
+                 <img src ="img/Men/Shoes/62.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
@@ -67,7 +67,7 @@
          <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card5.png" class="product-thumb" alt="">;
+                 <img src ="img/Women/Sportswear/29.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
@@ -79,7 +79,7 @@
          <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card6.png" class="product-thumb" alt="">;
+                 <img src ="img/Men/Jeans/55.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
@@ -91,7 +91,7 @@
          <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card7.png" class="product-thumb" alt="">;
+                 <img src ="img/Women/Shirts_Blouse/4.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
@@ -103,7 +103,7 @@
          <div class = "product-card">
              <div class = "product-image">
                  <span class = "discount-tag">50% off</span>
-                 <img src ="img/card8.png" class="product-thumb" alt="">;
+                 <img src ="img/Men/Trousers/58.png" class="product-thumb" alt="">;
                  <button class="card-btn">Add To Cart</button>
              </div>
              <div class = "product-info">
