--- a/searchproduct.html
+++ b/searchproduct.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results for</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/searchproduct.css">
 </head>
@@ -15,7 +21,7 @@
 
     <div class="main-content">
 
-        <div class="category-filter">
+        <div class="category-menu">
              <p class = "radio-mf">Choose between Man and Woman:</p>
              
             <div class="radio-male-female">
@@ -25,17 +31,19 @@
                 <label for="female">Woman</label>
             </div>
             
-            <p>Categories</p>
+            <p>BROWSE BY CATEGORIES</p>
 
-            <a href="">T-shirts</a>
-            <a href="">Shirts</a>
-            <a href="">Trousers</a>
-            <a href="">Sportswear</a>
-            <a href="">Hoodies</a>
-            <a href="">Jeans</a>
-            <a href="">Shoes</a>
-            <a href="">Joggers</a>
-            <a href="">Dresses</a>
+            <ul class="category-list">
+                <li><a href="">T-shirts</a></li>
+                <li><a href="">Shirts</a></li>
+                <li><a href="">Trousers</a></li>
+                <li><a href="">Sportswear</a></li>
+                <li><a href="">Hoodies</a></li>
+                <li><a href="">Jeans</a></li>
+                <li><a href="">Shoes</a></li>
+                <li><a href="">Joggers</a></li>
+                <li><a href="">Dresses</a></li>
+            </ul>
         </div>
 
         <section class="search-results">
