--- a/searchproduct.html
+++ b/searchproduct.html
@@ -46,7 +46,7 @@
                   <input type="range" class="range-min" min="0" max="3000" value="0" step="20">
                   <input type="range" class="range-max" min="0" max="3000" value="3000" step="20">
                 </div>
-                <div class="submit-btn">
+                <div class="filter-btn">
                     <input type="submit" value="Filter">
                 </div>
                     
